# TAEV2-Client

./: CMakeLists.txt
include/: infinite_scrolling.hpp  menu_background.hpp  menu_state.hpp  music.hpp  network_state.hpp  parallax_layer.hpp  scene.hpp  scene_manager.hpp  state.hpp  state_manager.hpp
src/: gui.cpp  infinite_scrolling.cpp  main.cpp  menu_background.cpp  menu_state.cpp  music.cpp  network_state.cpp  parallax_layer.cpp  scene_manager.cpp  state.cpp  state_manager.cpp
